changes for release 1.3.0